--- a/tests/locale/es.yml
+++ b/tests/locale/es.yml
@@ -1,3 +1,3 @@
 Hello: Hola
-<a href="#">English</a>: <a href="#">Spanish</a>
-Your name is @name: Your name is @name
+<a href="#">English</a>: <a href="#">Inglés</a>
+Your name is @name: Tu nombre es @name
